# chat_mcp

./: .gitignore  Dockerfile  README.md  __init__.py  main.py  requirements.txt
camphouse_mcp/: __init__.py  coordinator.py  pyproject.toml  server.py
camphouse_mcp/camphouse_connector/: __init__.py
camphouse_mcp/camphouse_connector/campaigns/: main.py
camphouse_mcp/camphouse_connector/fields/: main.py
camphouse_mcp/camphouse_connector/mediatypes/: main.py
camphouse_mcp/camphouse_connector/organizations/: main.py
camphouse_mcp/tools/: requests.py
connectors/: __init__.py  camphouse_connector.py  connector_interface.py  ga4_connector.py  mcp_base_connector.py
google-analytics-mcp/: requirements.txt
google-analytics-mcp/analytics_mcp/tools/: utils.py
llm/: base.py  gemini_llm.py
services/: __init__.py  chat_service.py  mcp_manager.py
tools/: __init__.py  tool_converter.py
